# cookiecutter-cpp-basic

{{cookiecutter.project_name}}/: CMakeLists.txt  compile.sh
